# TMDLang

./: README.md  pyproject.toml
doc/: Media-Syntax.md  video-script-exploration.zh_TW.md
example/: remix_demo.tmd  short_video_music.tmd  video_edit_demo.tmd  三天三夜.tmd
src/: TMDDrawer.py  TMDMedia.py  TMDScanner.py  TMDTimeline.py  tmd.py
