[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tmdlang"
version = "0.2.0"
description = "Timebase MarkDown Language — a markup language for timed event flows: band scores, audio remixes, and video editing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "cairocffi",
]

[project.optional-dependencies]
media = []  # ffmpeg/ffprobe must be installed separately on the system

[project.scripts]
tmd = "tmdlang.tmd:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
